# VentureVibe

./: .env.example  README.md  check_console.ps1  docker-compose.yml  pyproject.toml
.claude/doc/backend_refinement/: backend.md
.claude/doc/frontend_refinement/: frontend.md  shadcn_ui.md
backend/: check_env.py  pytest.ini  test_pydantic_root.py
backend/src/: app.py  main.py
backend/src/config/: settings.py
backend/src/domain/: entities.py  events.py  exceptions.py  value_objects.py
backend/src/infrastructure/: database.py
backend/tests/: conftest.py  test_api.py
backend/tests/domain/: test_entities.py  test_events.py  test_exceptions.py  test_value_objects.py
docs/agent_outputs/market-research-analyst/: venturevibe-rebrand-summary.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/core/data/: api.ts
logo_files/: 0dd4cee8e01f0df6.ltr.css+e5fdc5cf4222a847.ltr.css+519ddb3e5ce68252.ltr.css+ec6e1852c2594daf.ltr.css+2217971eaf63cf98.ltr.css  1dc521e725a26ce8.js.descarga  2a7672b429649f71.ltr.css+3e8fe94b93596d05.ltr.css+cafe8cb5c2b1d4a4.ltr.css+1408a9b8b663c1b4.ltr.css  2b6f7dd6a3951f76.strings.js.descarga  5662c3f62b4c5e18.ltr.css  89bc510972cd9a81.runtime.js.descarga  8ac707d30dcb8d71.ltr.css  96ea1f724ce8484d.ltr.css  9fa4e94d38eee6ef.en-GB.js.descarga  a30da226c28054e7.1ul071.vendor.js.descarga  a6e3a150f6792ef0.ltr.css+b049a6f78613c0fd.ltr.css+3efb7bb5ad0cceff.ltr.css  ac74e28fb8760500.s4le6a.vendor.js.descarga  b8b8eebb628e90fc.vendor.js.descarga  d9c1c4a28a40d659.ltr.css+7059011bf91a4425.ltr.css+409ac5f30a4417b8.ltr.css  width_127  width_550(1)  width_550(2)  width_550(3)  width_550(4)  width_550(5)  width_550(6)  width_550(7)  width_550(8)  width_800
(+41 files in other folders)
